fix swagger for basket-service
