# services/basket-service/docs/swagger.json
@@ -40,6 +40,17 @@
                 ],
                 "summary": "update user's cart",
                 "operationId": "update-users-cart",
+                "parameters": [
+                    {
+                        "description": "patch cart data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.patchCartRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -52,7 +63,39 @@
         }
     },
     "definitions": {
+        "handlers.patchCartInput": {
+            "description": "Patch cart input",
+            "type": "object",
+            "required": [
+                "product_id",
+                "quantity"
+            ],
+            "properties": {
+                "product_id": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handlers.patchCartRequest": {
+            "description": "Patch cart data",
+            "type": "object",
+            "required": [
+                "items"
+            ],
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.patchCartInput"
+                    }
+                }
+            }
+        },
         "models.Cart": {
+            "description": "Shopping cart information",
             "type": "object",
             "properties": {
                 "cart_items": {
@@ -73,6 +116,7 @@
             }
         },
         "models.CartItem": {
+            "description": "Shopping cart item information",
             "type": "object",
             "properties": {
                 "id": {
